[project]
name = "ground-motion-tools"
version = "0.3.1"
description = "A comprehensive Python library for processing and analyzing ground motion data, including seismic wave reading/writing, signal processing, response spectrum calculation, and intensity measure computation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "XiaopengGu", email = "xiaopenggu@qq.com"},
]
maintainers = [
    {name = "XiaopengGu", email = "xiaopenggu@qq.com"},
]
keywords = [
    "seismic",
    "ground-motion",
    "earthquake",
    "signal-processing",
    "response-spectrum",
    "intensity-measures",
    "seismic-analysis",
    "geophysics",
]

dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/cyling250/ground-motion-tools"
Documentation = "https://github.com/cyling250/ground-motion-tools#readme"
"Bug Reports" = "https://github.com/cyling250/ground-motion-tools/issues"

[[tool.uv.index]]
url="https://repo.huaweicloud.com/repository/pypi/simple/"
default=true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
